# neon-rings

./: .coverage  .gitignore  CHANGELOG.md  CONVENTIONS.md  fix_lint.py  fix_tabs.py  pyproject.toml
.github/workflows/: ci.yml
docs/: HIGH_AVAILABILITY.md  README.md
docs/CORE/: PROTOCOL_OF_SILENCE.md
src/neon_rings/: __init__.py  cli.py  client.py  crypto.py  server.py  transport.py
tests/: test_e2e.py  test_sound_of_silence.py  test_transport.py
